2008-01-07  Richard Jones  <rjones@redhat.com>

	Include mlvirtmanager in the Windows installer.
	* wininstaller.nsis.in: Include mlvirtmanager in the Windows
	  installer.
	* Makefile.in: Re-enable native code builds for Windows installer.
	* mlvirtmanager/Makefile.in: Pass $(LDFLAGS) when building on
	  Windows - you need to specify the location of $GTK/lib.

	Bundle Gtk DLLs and support files in the Windows installer.
	* configure.ac: Detect library paths instead of hard-
	  coding them.
	* wininstaller.nsis (removed): This file is now autogenerated.
	* wininstaller.nsis.in: Bundle Gtk DLLs and support files.
	* Makefile.in: More verbose messages from NSIS.

	Include required libraries in the Windows installer.
	* wininstaller.nsis: Include *.dll files.

	Windows installer.
	* Makefile.in, configure.ac: Add --with-nsis[=path/to/nsis] and
	  call out to 'makensis.exe'.
	* wininstaller.nsis, winlicense.rtf: Configuration and support
	  files for NSIS-based Windows installer.
	* README: Update documentation to reflect.

2008-01-05  Richard Jones  <rjones@redhat.com>

	mlvirtmanager compiles and runs on Windows (MinGW).
	* configure.ac: Directories to search for optional modules were
	  specified incorrectly - fixed.
	* mlvirtmanager/Makefile.in: Changed so can build without
	  ocamlfind, and checked it can build on Windows.

	mlvirsh can compile without extlib
	* mlvirsh/mlvirsh.ml: mlvirsh only needed three functions from
	  extlib, so copy them in here to avoid the dependency.
	* configure.ac: No dependency on extlib for mlvirsh.
	* mlvirsh/Makefile.in: Changed so can build without ocamlfind.
	* README: Updated documentation.

	Update documentation for Windows.
	* README: Update documentation for Windows.

	Build libvirt and examples on Windows (MinGW).
	* aclocal.m4: Add AC_CHECK_OCAML_MODULE to check for OCaml
	  modules directly (without ocamlfind being needed).
	* configure.ac: Remove requirement for ocamlfind.