@@ -27,7 +27,7 @@ core.*
 libvirt/libvirt_version.ml
 examples/list_domains
 mlvirsh/mlvirsh
-mlvirtmanager/mlvirtmanager
+virt-ctrl/virt-ctrl
 virt-top/virt-top
 virt-df/virt-df
 wininstaller.nsis
