@@ -23,17 +23,17 @@ META.in
 mlvirsh/.depend
 mlvirsh/Makefile.in
 mlvirsh/mlvirsh.ml
-mlvirtmanager/.depend
-mlvirtmanager/Makefile.in
-mlvirtmanager/mlvirtmanager_connections.ml
-mlvirtmanager/mlvirtmanager_connections.mli
-mlvirtmanager/mlvirtmanager_domain_ops.ml
-mlvirtmanager/mlvirtmanager_domain_ops.mli
-mlvirtmanager/mlvirtmanager_helpers.ml
-mlvirtmanager/mlvirtmanager_helpers.mli
-mlvirtmanager/mlvirtmanager_mainwindow.ml
-mlvirtmanager/mlvirtmanager_mainwindow.mli
-mlvirtmanager/mlvirtmanager.ml
+virt-ctrl/.depend
+virt-ctrl/Makefile.in
+virt-ctrl/vc_connections.ml
+virt-ctrl/vc_connections.mli
+virt-ctrl/vc_domain_ops.ml
+virt-ctrl/vc_domain_ops.mli
+virt-ctrl/vc_helpers.ml
+virt-ctrl/vc_helpers.mli
+virt-ctrl/vc_mainwindow.ml
+virt-ctrl/vc_mainwindow.mli
+virt-ctrl/virt_ctrl.ml
 README
 TODO.libvirt
 TODO.virt-top
