@@ -1,22 +1,0 @@
-mlvirtmanager_connections.cmi: ../libvirt/libvirt.cmi 
-mlvirtmanager_domain_ops.cmi: mlvirtmanager_connections.cmi 
-mlvirtmanager_helpers.cmi: ../libvirt/libvirt.cmi 
-mlvirtmanager_mainwindow.cmi: mlvirtmanager_connections.cmi 
-mlvirtmanager_connections.cmo: mlvirtmanager_helpers.cmi \
-    ../libvirt/libvirt.cmi mlvirtmanager_connections.cmi 
-mlvirtmanager_connections.cmx: mlvirtmanager_helpers.cmx \
-    ../libvirt/libvirt.cmx mlvirtmanager_connections.cmi 
-mlvirtmanager_domain_ops.cmo: mlvirtmanager_connections.cmi \
-    ../libvirt/libvirt.cmi mlvirtmanager_domain_ops.cmi 
-mlvirtmanager_domain_ops.cmx: mlvirtmanager_connections.cmx \
-    ../libvirt/libvirt.cmx mlvirtmanager_domain_ops.cmi 
-mlvirtmanager_helpers.cmo: ../libvirt/libvirt.cmi mlvirtmanager_helpers.cmi 
-mlvirtmanager_helpers.cmx: ../libvirt/libvirt.cmx mlvirtmanager_helpers.cmi 
-mlvirtmanager_mainwindow.cmo: mlvirtmanager_connections.cmi \
-    ../libvirt/libvirt.cmi mlvirtmanager_mainwindow.cmi 
-mlvirtmanager_mainwindow.cmx: mlvirtmanager_connections.cmx \
-    ../libvirt/libvirt.cmx mlvirtmanager_mainwindow.cmi 
-mlvirtmanager.cmo: mlvirtmanager_mainwindow.cmi mlvirtmanager_domain_ops.cmi \
-    mlvirtmanager_connections.cmi 
-mlvirtmanager.cmx: mlvirtmanager_mainwindow.cmx mlvirtmanager_domain_ops.cmx \
-    mlvirtmanager_connections.cmx 
