@@ -1,0 +1,18 @@
+vc_connections.cmi: ../libvirt/libvirt.cmi 
+vc_domain_ops.cmi: vc_connections.cmi 
+vc_helpers.cmi: ../libvirt/libvirt.cmi 
+vc_mainwindow.cmi: vc_connections.cmi 
+vc_connections.cmo: vc_helpers.cmi ../libvirt/libvirt.cmi vc_connections.cmi 
+vc_connections.cmx: vc_helpers.cmx ../libvirt/libvirt.cmx vc_connections.cmi 
+vc_domain_ops.cmo: vc_connections.cmi ../libvirt/libvirt.cmi \
+    vc_domain_ops.cmi 
+vc_domain_ops.cmx: vc_connections.cmx ../libvirt/libvirt.cmx \
+    vc_domain_ops.cmi 
+vc_helpers.cmo: ../libvirt/libvirt.cmi vc_helpers.cmi 
+vc_helpers.cmx: ../libvirt/libvirt.cmx vc_helpers.cmi 
+vc_mainwindow.cmo: vc_connections.cmi ../libvirt/libvirt.cmi \
+    vc_mainwindow.cmi 
+vc_mainwindow.cmx: vc_connections.cmx ../libvirt/libvirt.cmx \
+    vc_mainwindow.cmi 
+virt_ctrl.cmo: vc_mainwindow.cmi vc_domain_ops.cmi vc_connections.cmi 
+virt_ctrl.cmx: vc_mainwindow.cmx vc_domain_ops.cmx vc_connections.cmx 
