@@ -1,5 +1,12 @@
 2008-01-07  Richard Jones  <rjones@redhat.com>
 
+	mlvirtmanager renamed as virt-ctrl.
+	* .hgignore, Makefile.in, configure.ac: Rename
+	  mlvirtmanager as virt-ctrl to avoid any confusion with
+	  the real virt-manager.
+	* mlvirtmanager/, virt-ctrl/: Subdirectory moved.
+	* README: Supporting documentation updated.
+
 	Include mlvirtmanager in the Windows installer.
 	* wininstaller.nsis.in: Include mlvirtmanager in the Windows
 	  installer.
